# MASI

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  TODO_TASKS.md  pyproject.toml
configs/: Full_dataset.json  data_prep_demo.json  masi_experiment_amazon_csj_demo.json  masi_tokens_amazon_csj_demo.json  masi_train_csj_full.json  masi_train_csj_medium_colab.json  masi_train_csj_medium_kaggle.json  masi_train_csj_smoke.json  masi_train_csj_subset_large.json  masi_train_csj_subset_medium.json  recommender_amazon_csj_demo.json  recommender_demo.json
data/processed/demo/: interactions.filtered.jsonl  metadata.filtered.jsonl
data/raw/amazon_reviews_2023/: demo_metadata.jsonl  demo_reviews.jsonl
docs/: masi_implementation_note.tex  reference_repos.md  technical_design.md
notebooks/: 01_dataset_and_feature_prep_demo.ipynb  02_recommender_foundation_demo.ipynb  03_colab_smoke_test.ipynb  04_colab_smoke_test_fresh_clone.ipynb  05_kaggle_full_workflow.ipynb  06_kaggle_medium_smoke_test.ipynb  07_kaggle_github_bootstrap_medium_run.ipynb  medium.ipynb
outputs/demo/: dataset_manifest.json  demo_summary.json
outputs/recommender_demo/: recommender_demo_summary.json
scripts/: build_dataset_manifest.py  build_masi_tokens.py  demo_phase1_prep.py  demo_recommender_foundation.py  download_amazon_csj_dataset.py  download_amazon_csj_images.py  download_amazon_csj_subset_images.py  prepare_amazon_csj_subset.py  run_masi_experiment.py  train_masi.py
src/masi/: __init__.py
src/masi/alignment/: __init__.py  behavior_alignment.py
src/masi/common/: __init__.py  config.py  (+4 more)
(+18 files in other folders)
